--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h2>QR Code Generator</h2>
     <input type="text" id="linkInput" placeholder="Enter URL or text" oninput="generateQRCode()" />
     <div>
-      <button class="btn copy" onclick="copyQRCodeImage()">Copy</button>
+      <button class="btn copy" id="copyBtn" onclick="copyQRCodeImage()">Copy</button>
       <button class="btn download" onclick="downloadQRCode()">Download</button>
     </div>
     <div id="copy-alert">Copied to clipboard!</div>
@@ -102,6 +102,7 @@
     const inputField = document.getElementById("linkInput");
     const iosWarning = document.getElementById("ios-warning");
     const iosImage = document.getElementById("ios-img-preview");
+    const copyBtn = document.getElementById("copyBtn");
 
     const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
     const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
@@ -111,6 +112,7 @@
       iosWarning.style.display = "block";
       iosImage.style.display = "block";
       canvas.remove();
+      copyBtn.style.display = "none";
     }
 
     function generateQRCode() {
@@ -161,30 +163,6 @@
 
     function copyQRCodeImage() {
       const alert = document.getElementById("copy-alert");
-      if (showIOSImage && iosImage.src) {
-        fetch(iosImage.src)
-          .then(res => res.blob())
-          .then(blob => {
-            if (navigator.clipboard && window.ClipboardItem) {
-              const item = new ClipboardItem({ "image/png": blob });
-              navigator.clipboard.write([item]).then(() => {
-                alert.textContent = "Copied to clipboard!";
-                alert.style.display = "block";
-                setTimeout(() => {
-                  alert.style.display = "none";
-                }, 1500);
-              }).catch(() => {
-                alert.textContent = "Copy failed. Try tap and hold to save.";
-                alert.style.display = "block";
-              });
-            } else {
-              alert.textContent = "Tap and hold the QR image below to save it manually.";
-              alert.style.display = "block";
-            }
-          });
-        return;
-      }
-
       if (!canvas || !canvas.toBlob) {
         alert.textContent = "Your browser doesn't support copying.";
         alert.style.display = "block";
@@ -211,14 +189,17 @@
     }
 
     function downloadQRCode() {
-      if (canvas && canvas.classList.contains("visible")) {
-        const link = document.createElement("a");
-        link.download = "qrcode_bpn.png";
+      const link = document.createElement("a");
+      link.download = "qrcode_bpn.png";
+      if (showIOSImage && iosImage.src) {
+        link.href = iosImage.src;
+      } else if (canvas && canvas.classList.contains("visible")) {
         link.href = canvas.toDataURL("image/png");
-        link.click();
       } else {
         alert("Please generate a QR code first.");
+        return;
       }
+      link.click();
     }
   </script>
 </body>
