--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>QR Code Generator</h2>
+    <h2>BPN QR Code Generator</h2>
     <input type="text" id="linkInput" placeholder="Enter URL or text" oninput="generateQRCode()" />
     <div>
       <button class="btn copy" id="copyBtn" onclick="copyQRCodeImage()">Copy</button>
